updating Sourcing Data

--- a/Sourcing Data.ipynb
+++ b/Sourcing Data.ipynb
@@ -310,14 +310,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Giova\\AppData\\Local\\Temp\\ipykernel_25268\\2030071899.py:2: UserWarning: Parsing dates in %Y-%m-%d %H:%M:%S format when dayfirst=True was specified. Pass `dayfirst=False` or specify a format to silence this warning.\n",
-      "  df_trips['started_at'] = pd.to_datetime(df_trips['started_at'], dayfirst=True)\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -610,7 +602,7 @@
    ],
    "source": [
     "# Converting 'started_at' from object to datetime format\n",
-    "df_trips['started_at'] = pd.to_datetime(df_trips['started_at'], dayfirst=True)\n",
+    "df_trips['started_at'] = pd.to_datetime(df_trips['started_at'], format='%Y-%m-%d %H:%M:%S')\n",
     "\n",
     "# Creating date column in YYYY-MM-DD string format from started_at\n",
     "df_trips['date'] = pd.to_datetime(df_trips['started_at'], format='%Y-%m-%d').dt.date\n",
@@ -2601,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "bd590d73-efc8-4ad0-a03e-ca9a837b01e0",
    "metadata": {},
    "outputs": [],
@@ -2622,7 +2614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "30331299-5cd3-49be-a298-754faeab1d9f",
    "metadata": {
     "scrolled": true
@@ -4458,7 +4450,7 @@
        "  'value': 82}]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4471,7 +4463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "de79bbff-ad0b-4aa7-b050-9c110d9d113a",
    "metadata": {
     "scrolled": true
@@ -4847,7 +4839,7 @@
        " '2022-12-31T00:00:00']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4860,7 +4852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "2be3b85e-43f4-46c0-b031-f79ed7c0512d",
    "metadata": {
     "scrolled": true
@@ -5236,7 +5228,7 @@
        " 82]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5257,7 +5249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "ea212e0b-5f46-44cc-ac47-f575dc73ab22",
    "metadata": {},
    "outputs": [
@@ -5325,7 +5317,7 @@
        "364 2022-12-31      8.2"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5353,7 +5345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "27582726-1012-4b0e-9123-48d1d0985341",
    "metadata": {},
    "outputs": [
@@ -5533,7 +5525,7 @@
        "895484      9.3   both  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5546,7 +5538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "94171192-2e7a-4bf6-9130-2fdf47015b7b",
    "metadata": {},
    "outputs": [
@@ -5560,7 +5552,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5579,7 +5571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "bc39214e-a30b-44ce-86af-473d64ce00ba",
    "metadata": {},
    "outputs": [],
