updating Sourcing Data Notebook

--- a/Sourcing Data.ipynb
+++ b/Sourcing Data.ipynb
@@ -2576,7 +2576,7 @@
     }
    ],
    "source": [
-    "# Getting La Guardia Airport, NY API data of 2022\n",
+    "# Getting La Guardia, NY API data of 2022\n",
     "raw = requests.get(\n",
     "    'https://www.ncdc.noaa.gov/cdo-web/api/v2/data?datasetid=GHCND&datatypeid=TAVG&limit=1000&stationid=GHCND:USW00014732&startdate=2022-01-01&enddate=2022-12-31', headers={'token': Token})\n",
     "raw_data = json.loads(raw.text)\n",
@@ -5534,6 +5534,14 @@
     "# Merging data frames\n",
     "df_merged = df_trips.merge(df_temp, how='left', on='date', indicator='merged')\n",
     "df_merged.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b099c34-2171-4f31-b142-b9e6fe30f6ac",
+   "metadata": {},
+   "source": [
+    "I proceeded to merge on the shared date column using a left merge to keep every record of the trip data while adding the corresponding daily temperature reading. The below \"both\" value count of 895485 confirms all rows were merged as expected, with no missing values in either data frames. This merged data frame will now facilitate the analysis of trip sensitivity to weather."
    ]
   },
   {
